# ai-safety-testing

./: .gitignore  BLOG_POST.md  BLOG_PUBLICATION_GUIDE.md  LICENSE  MANIFEST.in  README.md  benchmark_dashboard.py  demo_severity_scoring.py  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  run_comprehensive_tests.py  setup.py  severity_scoring.py  simple_ai_tester.py  test_output.txt  test_simple_ai.py
.github/workflows/: ci.yml  tests.yml
docs/: EXAMPLES.md  FULL_GUIDE.md
scripts/: demo.py  quick_test.py  run_tests.py
src/ai_safety_tester/: __init__.py  benchmark.py  metrics.py  severity.py  tester.py
src/ai_safety_tester/providers/: __init__.py  base.py  ollama_provider.py  openai_provider.py
tests/: conftest.py  test_simple_ai.py  test_unit.py
